# scarf-py

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
examples/: send_test_event.py
scarf/: __init__.py  event_logger.py  version.py
scarf_py/: __init__.py
tests/: test_event_logger.py
