[project]
name = "scarf-sdk"
version = "0.1.0"
description = "Python bindings for Scarf telemetry"
authors = [
    { name="Scarf Engineering", email="engineering@scarf.sh" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.25.0"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]